Fix desktop menu spacing

--- a/styles/sass/ui/header.scss
+++ b/styles/sass/ui/header.scss
@@ -83,14 +83,17 @@ $header-z-index: 100;
     height: 100%;
     
     &__items {
+        height: 100%;
+        
         @include grid-media-query("portable") {
             background: transparentize($charcoal, .1);
 
-//            position: relative;
-//            z-index: $menu-z-index;
-            
             height: 100vh;
         }
+    }
+    
+    &__grid {
+        height: 100%;
     }
     
     &__item {
@@ -104,9 +107,6 @@ $header-z-index: 100;
         
         @include grid-media-query("portable") {
             @include typecsset-font-size($tertiary-headline-size);
-            
-//            position: relative;
-//            z-index: $menu-z-index;
             
             height: 3rem;
         }
