--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1367,7 +1367,7 @@ h1 {
 h2 {
   font-size: 36px;
   font-size: 2.25rem;
-  line-height: 1.3333333; }
+  line-height: 1.33333; }
 
 h3 {
   font-size: 30px;
@@ -1387,7 +1387,7 @@ h5 {
 h6 {
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.3333333; }
+  line-height: 1.33333; }
 
 /*------------------------------------*\
     #LISTS
@@ -1687,7 +1687,7 @@ body {
     height: 100%;
     font-size: 14px;
     font-size: 0.875rem;
-    line-height: 1.7142857;
+    line-height: 1.71429;
     color: #FFF; }
   .campus-select__list {
     display: inline; }
@@ -1728,10 +1728,14 @@ body {
 
 .menu {
   height: 100%; }
-  @media only screen and (max-width: 1023px) {
-    .menu__items {
-      background: rgba(51, 51, 51, 0.9);
-      height: 100vh; } }
+  .menu__items {
+    height: 100%; }
+    @media only screen and (max-width: 1023px) {
+      .menu__items {
+        background: rgba(51, 51, 51, 0.9);
+        height: 100vh; } }
+  .menu__grid {
+    height: 100%; }
   .menu__item {
     height: 100%;
     color: #FFF;
@@ -1762,7 +1766,7 @@ body {
   transition: 100ms;
   cursor: pointer;
   user-select: none;
-  border-radius: 0.2142857rem; }
+  border-radius: 0.21429rem; }
   .nav-icon:hover {
     opacity: 1; }
   .nav-icon:active {
@@ -1771,30 +1775,30 @@ body {
 .lines {
   display: inline-block;
   width: 1.5rem;
-  height: 0.2142857rem;
+  height: 0.21429rem;
   background: currentColor;
-  border-radius: 0.1071429rem;
+  border-radius: 0.10714rem;
   position: relative; }
   .lines:before, .lines:after {
     display: inline-block;
     width: 1.5rem;
-    height: 0.2142857rem;
+    height: 0.21429rem;
     background: currentColor;
-    border-radius: 0.1071429rem;
+    border-radius: 0.10714rem;
     position: absolute;
     left: 0;
     content: '';
-    -webkit-transform-origin: 0.1071429rem center;
-    transform-origin: 0.1071429rem center; }
+    -webkit-transform-origin: 0.10714rem center;
+    transform-origin: 0.10714rem center; }
   .lines:before {
     top: 0.375rem; }
   .lines:after {
     top: -0.375rem; }
 
 .nav-icon:hover .lines:before {
-  top: 0.4285714rem; }
+  top: 0.42857rem; }
 .nav-icon:hover .lines:after {
-  top: -0.4285714rem; }
+  top: -0.42857rem; }
 
 .nav-icon .lines {
   transition: background 100ms 0.5s ease; }
@@ -1989,7 +1993,7 @@ body {
 small, .smaller {
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1.7142857; }
+  line-height: 1.71429; }
 
 i {
   font-style: italic; }
